# can-ota-stm32

./: .gitignore  README.md
app/: Makefile  bxcan.c  bxcan.h  device_regs.h  main.c  mcp2515.c  mcp2515.h  slcan.c  slcan.h  usart.c  usart.h
bootloader/: Makefile  bootloader.ld  bxcan_bl.c  bxcan_bl.h  device_regs.h  flash_bl.c  flash_bl.h  main_bl.c  startup_bl.s  usart_bl.c  usart_bl.h
docs/: LESSONS_LEARNED.md  WIRING.md  mcp2515_cnf_8mhz.h
pico2_slcan/: CMakeLists.txt  main.c
tools/: can_flash.py  can_ota_bluepill.py  can_test_3node.py  detect_chip.py
